// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should contain progress-bar-inner-text css class when text inside is set true 1`] = `
<scale-progress-bar text-inside="true">
  <mock:shadow-root>
    <style>
      .progress-bar {
  width: 100%;
  max-width: 30rem;
}
.progress-bar--has-error {}
.progress-bar--has-error .progress-bar__outer {
  border: 1px solid #D90000;
}
.progress-bar--has-error .progress-bar__status-description {
  color: #D90000;
}
.progress-bar--has-error scale-icon {
  --icon-color: #D90000;
}
.progress-bar--disabled {
  cursor: not-allowed;
  opacity: 0.5;
}
.progress-bar--disabled .progress-bar__label {
  color: #7C7C7C;
}
.progress-bar__label {
  display: block;
  padding: 0.5rem 0;
}
.progress-bar-wrapper {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar-wrapper scale-icon {}
.progress-bar__outer {
  width: 100%;
  height: 8px;
  margin: 8px 8px 8px 0;
  overflow: hidden;
  position: relative;
  border-radius: 100px;
  border: 1px solid #6c6c6c;
}
.progress-bar__inner {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
  white-space: nowrap;
  justify-content: flex-end;
  animation-fill-mode: both;
  background: #e20074;
}
.progress-bar__inner-status {
  color: #fff;
  padding: 0 12px;
  font-size: 0.75rem;
}
.progress-bar__status {
  display: inline-block;
  font-size: 0.75rem;
  font-weight: 800;
}
.progress-bar__status-description {
  color: #6c6c6c;
  font-size: 0.75rem;
  font-weight: 700;
}
.progress-bar__aria-live {
  clip: rect(0 0 0 0);
  width: 1px;
  border: 0;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  position: absolute;
}
    </style>
    <style>
      @keyframes showProgress {
      from {
        width: 0;
      }
      to {
        width: 0%;
      }
    }
    </style>
    <div class="progress-bar">
      <div class="progress-bar-wrapper">
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0%" class="progress-bar__outer" id="progress-bar-3" role="progressbar" style="height: 6px;">
          <div class="progress-bar__inner" style="width: 0%; border: 1px solid transparent; animation: showProgress 3s ease-in-out;"></div>
        </div>
      </div>
    </div>
    <span aria-live="polite" class="progress-bar__aria-live"></span>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should contain progress-bar-text css class when show text is set true 1`] = `
<scale-progress-bar show-status="true">
  <mock:shadow-root>
    <style>
      .progress-bar {
  width: 100%;
  max-width: 30rem;
}
.progress-bar--has-error {}
.progress-bar--has-error .progress-bar__outer {
  border: 1px solid #D90000;
}
.progress-bar--has-error .progress-bar__status-description {
  color: #D90000;
}
.progress-bar--has-error scale-icon {
  --icon-color: #D90000;
}
.progress-bar--disabled {
  cursor: not-allowed;
  opacity: 0.5;
}
.progress-bar--disabled .progress-bar__label {
  color: #7C7C7C;
}
.progress-bar__label {
  display: block;
  padding: 0.5rem 0;
}
.progress-bar-wrapper {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar-wrapper scale-icon {}
.progress-bar__outer {
  width: 100%;
  height: 8px;
  margin: 8px 8px 8px 0;
  overflow: hidden;
  position: relative;
  border-radius: 100px;
  border: 1px solid #6c6c6c;
}
.progress-bar__inner {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
  white-space: nowrap;
  justify-content: flex-end;
  animation-fill-mode: both;
  background: #e20074;
}
.progress-bar__inner-status {
  color: #fff;
  padding: 0 12px;
  font-size: 0.75rem;
}
.progress-bar__status {
  display: inline-block;
  font-size: 0.75rem;
  font-weight: 800;
}
.progress-bar__status-description {
  color: #6c6c6c;
  font-size: 0.75rem;
  font-weight: 700;
}
.progress-bar__aria-live {
  clip: rect(0 0 0 0);
  width: 1px;
  border: 0;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  position: absolute;
}
    </style>
    <style>
      @keyframes showProgress {
      from {
        width: 0;
      }
      to {
        width: 0%;
      }
    }
    </style>
    <div class="progress-bar">
      <div class="progress-bar-wrapper">
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0%" class="progress-bar__outer" id="progress-bar-2" role="progressbar" style="height: 6px;">
          <div class="progress-bar__inner" style="width: 0%; border: 1px solid transparent; animation: showProgress 3s ease-in-out;"></div>
        </div>
        <div aria-hidden="true" class="progress-bar__status">
          0%
        </div>
      </div>
    </div>
    <span aria-live="polite" class="progress-bar__aria-live"></span>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should have css property width 24px when stroke width is set to 24 1`] = `
<scale-progress-bar stroke-width="24">
  <mock:shadow-root>
    <style>
      .progress-bar {
  width: 100%;
  max-width: 30rem;
}
.progress-bar--has-error {}
.progress-bar--has-error .progress-bar__outer {
  border: 1px solid #D90000;
}
.progress-bar--has-error .progress-bar__status-description {
  color: #D90000;
}
.progress-bar--has-error scale-icon {
  --icon-color: #D90000;
}
.progress-bar--disabled {
  cursor: not-allowed;
  opacity: 0.5;
}
.progress-bar--disabled .progress-bar__label {
  color: #7C7C7C;
}
.progress-bar__label {
  display: block;
  padding: 0.5rem 0;
}
.progress-bar-wrapper {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar-wrapper scale-icon {}
.progress-bar__outer {
  width: 100%;
  height: 8px;
  margin: 8px 8px 8px 0;
  overflow: hidden;
  position: relative;
  border-radius: 100px;
  border: 1px solid #6c6c6c;
}
.progress-bar__inner {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
  white-space: nowrap;
  justify-content: flex-end;
  animation-fill-mode: both;
  background: #e20074;
}
.progress-bar__inner-status {
  color: #fff;
  padding: 0 12px;
  font-size: 0.75rem;
}
.progress-bar__status {
  display: inline-block;
  font-size: 0.75rem;
  font-weight: 800;
}
.progress-bar__status-description {
  color: #6c6c6c;
  font-size: 0.75rem;
  font-weight: 700;
}
.progress-bar__aria-live {
  clip: rect(0 0 0 0);
  width: 1px;
  border: 0;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  position: absolute;
}
    </style>
    <style>
      @keyframes showProgress {
      from {
        width: 0;
      }
      to {
        width: 0%;
      }
    }
    </style>
    <div class="progress-bar">
      <div class="progress-bar-wrapper">
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0%" class="progress-bar__outer" id="progress-bar-1" role="progressbar" style="height: 24px;">
          <div class="progress-bar__inner" style="width: 0%; border: 1px solid transparent; animation: showProgress 3s ease-in-out;"></div>
        </div>
      </div>
    </div>
    <span aria-live="polite" class="progress-bar__aria-live"></span>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should match snapshot 1`] = `
<scale-progress-bar>
  <mock:shadow-root>
    <style>
      .progress-bar {
  width: 100%;
  max-width: 30rem;
}
.progress-bar--has-error {}
.progress-bar--has-error .progress-bar__outer {
  border: 1px solid #D90000;
}
.progress-bar--has-error .progress-bar__status-description {
  color: #D90000;
}
.progress-bar--has-error scale-icon {
  --icon-color: #D90000;
}
.progress-bar--disabled {
  cursor: not-allowed;
  opacity: 0.5;
}
.progress-bar--disabled .progress-bar__label {
  color: #7C7C7C;
}
.progress-bar__label {
  display: block;
  padding: 0.5rem 0;
}
.progress-bar-wrapper {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar-wrapper scale-icon {}
.progress-bar__outer {
  width: 100%;
  height: 8px;
  margin: 8px 8px 8px 0;
  overflow: hidden;
  position: relative;
  border-radius: 100px;
  border: 1px solid #6c6c6c;
}
.progress-bar__inner {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
  white-space: nowrap;
  justify-content: flex-end;
  animation-fill-mode: both;
  background: #e20074;
}
.progress-bar__inner-status {
  color: #fff;
  padding: 0 12px;
  font-size: 0.75rem;
}
.progress-bar__status {
  display: inline-block;
  font-size: 0.75rem;
  font-weight: 800;
}
.progress-bar__status-description {
  color: #6c6c6c;
  font-size: 0.75rem;
  font-weight: 700;
}
.progress-bar__aria-live {
  clip: rect(0 0 0 0);
  width: 1px;
  border: 0;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  position: absolute;
}
    </style>
    <style>
      @keyframes showProgress {
      from {
        width: 0;
      }
      to {
        width: 0%;
      }
    }
    </style>
    <div class="progress-bar">
      <div class="progress-bar-wrapper">
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0%" class="progress-bar__outer" id="progress-bar-0" role="progressbar" style="height: 6px;">
          <div class="progress-bar__inner" style="width: 0%; border: 1px solid transparent; animation: showProgress 3s ease-in-out;"></div>
        </div>
      </div>
    </div>
    <span aria-live="polite" class="progress-bar__aria-live"></span>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;
